--- a/Stackbucks.html
+++ b/Stackbucks.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Segoe UI', Tahoma, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
             font-weight: 600;
         }
         /*header*/
@@ -122,7 +122,7 @@
 
         .sub-header h1{
             font-size: 1em;
-            margin-left: 15em;
+            margin-left: 14%;
             font-weight: 800;
         }
         /*Seção principal*/
@@ -154,7 +154,7 @@
             };
             p{
                 font-size: 20px;
-            }
+            };
             span{
                 font-size: 20px;
             }
@@ -241,6 +241,7 @@
         .section-favorites{
             display: flex;
             flex-direction: column;
+            margin-bottom: 1em;
         }
 
         .header-favorites{
@@ -302,7 +303,71 @@
                 gap: 1.5em;
             } 
         }
-        
+
+        /*Seção Endless extras*/
+        .section-endless{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 6.4em;
+            gap: 3em;
+        }
+
+        .header-endless{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            gap: 1.5em;
+            h1{
+                font-size: xx-large;
+            }
+        }
+
+        .contents-endless{
+            display: flex;
+            flex-direction: row;
+            padding: 0 2em;
+            gap: 4em;
+        }
+
+        .content-extras{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 1.5em;
+            .head-extras{
+                img{
+                    height: 112px;
+                }
+            }
+        }
+
+        .head-extras{
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2em;
+        }
+
+        .description-extras{
+            text-align: center;
+            p{
+                margin-bottom: 15px;
+            }
+            a{
+                color: #008248;
+            }
+            a:hover{
+                text-decoration: none;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -326,7 +391,7 @@
         </nav>
         
     </header>
-    <div class="sub-header"><h1>STARBUCKS REWARDS</h1></div>
+    <div class="sub-header"><h1>Starbucks® Rewards</h1></div>
 
     <!-- Seção principal -->
     <section class="main-section">
@@ -413,32 +478,32 @@
         <div class="contents-endless">
             <div class="content-extras">
                 <div class="head-extras">
-                    <img src="" alt="">
-                    <h3></h3>
+                    <img src="assets/images/fun-freebies.webp" alt="">
+                    <h3>Fun freebies</h3>
                 </div>
                 <div class="description-extras">
-                    <p></p>
-                    <a href=""></a>
+                    <p>Not only can you earn free coffee, look forward to a<br> birthday treat plus coffee and tea refills.</p>
+                    <a href="#">Learn more</a>
                 </div>
             </div>
             <div class="content-extras">
                 <div class="head-extras">
-                    <img src="" alt="">
-                    <h3></h3>
+                    <img src="assets/images/order-and-pay-ahead.webp" alt="">
+                    <h3>Order & pay ahead</h3>
                 </div>
                 <div class="description-extras">
-                    <p></p>
-                    <a href=""></a>
+                    <p>Master the art of ordering ahead with saved<br> favorites and payment methods.</p>
+                    <a href="#">Learn more</a>
                 </div>
             </div>
             <div class="content-extras">
                 <div class="head-extras">
-                    <img src="" alt="">
-                    <h3></h3>
+                    <img src="assets/images/get-to-free-faster.webp" alt="">
+                    <h3>Get to free faster</h3>
                 </div>
                 <div class="description-extras">
-                    <p></p>
-                    <a href=""></a>
+                    <p>Earn Stars even quicker with Bonus Star challenges,<br> Double Star Days and exciting games.</p>
+                    <a href="#">Learn more</a>
                 </div>
             </div>
         </div>
