--- a/Stackbucks.html
+++ b/Stackbucks.html
@@ -73,32 +73,48 @@
         <div class="header-favorites">
             <h1>Get your favorites for free</h1>
             <div class="points-bar">
-                <button class="btn-25">25<span class="span-star-icon">★</span></button>
-                <button class="btn-100">100<span class="span-star-icon">★</span></button>
-                <button class="btn-200">200<span class="span-star-icon">★</span></button>
-                <button class="btn-300">300<span class="span-star-icon">★</span></button>
-                <button class="btn-400">400<span class="span-star-icon">★</span></button>
+                <button class="btn-points active">25<span class="span-star-icon">★</span></button>
+                <button class="btn-points">100<span class="span-star-icon">★</span></button>
+                <button class="btn-points">200<span class="span-star-icon">★</span></button>
+                <button class="btn-points">300<span class="span-star-icon">★</span></button>
+                <button class="btn-points">400<span class="span-star-icon">★</span></button>
             </div>
         </div>
         <div class="contents-favorites">
-            <div class="content point-25">
+            <div class="content point-25 active">
                 <img src="assets/images/25.png" alt="cup of coffee">
                 <div class="description">
                     <h2>Customize your drink</h2>
-                    <p>Make your drink just right with an extra <br>espresso shot or a dash of your favorite syrup.</p>
+                    <p>Make your drink just right with an extra espresso shot or a dash of your favorite syrup.</p>
                 </div>
             </div>
-            <div class="content point-100" style="display: none;">
-                <h2>Brewed hot or iced coffee or tea, bakery item, packaged snack and more</h2>
+            <div class="content point-100">
+                <img src="assets/images/100.webp" alt="">
+                <div class="description">
+                    <h2>Brewed hot or iced coffee or tea, bakery item, packaged snack and more</h2>
+                    <p>Treat yourself to an iced coffee, buttery croissant, bag of chips and more.</p>
+                </div>
             </div>
-            <div class="content point-200" style="display: none;">
-                <h2>Handcrafted drink (Cold Brew, lattes and more) or hot breakfast</h2>
+            <div class="content point-200">
+                <img src="assets/images/200.webp" alt="">
+                <div class="description">
+                    <h2>Handcrafted drink (Cold Brew, lattes and more) or hot breakfast</h2>
+                    <p>Turn good mornings great with a delicious handcrafted drink of your choice, breakfast sandwich or oatmeal on us.</p>
+                </div>
             </div>
-            <div class="content point-300" style="display: none;">
-                <h2>Sandwich, protein box or at-home coffee</h2>
+            <div class="content point-300">
+                <img src="assets/images/300.webp" alt="">
+                <div class="description">
+                    <h2>Sandwich, protein box or at-home coffee</h2>
+                    <p>Enjoy a PM pick-me-up with a lunch sandwich, protein box or a bag of coffee—including Starbucks VIA Instant®.</p>
+                </div>
             </div>
-            <div class="content point-400" style="display: none;">
-                <h2>Select Starbucks® merchandise</h2>
+            <div class="content point-400">
+                <img src="assets/images/400.webp" alt="">
+                <div class="description">
+                    <h2>Select Starbucks® merchandise</h2>
+                    <p>Take home a signature cup, drink tumbler or your choice of coffee merch up to $20.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -145,7 +161,7 @@
         </div>
     </section>
     <!-- Seção Cash or card -->
-     <section class="section-cardCash">
+    <section class="section-cardCash">
         <div class="container-cardCash">
             <div class="header-cardCash">
                 <h1>Cash or card, you earn Stars</h1>
@@ -198,6 +214,7 @@
                 </div>
             </div>
         </div>
-     </section>
+    </section>
+    <script src="assets/javascript/script.js"></script>
 </body>
 </html>
